# wf-external-decoration

./: LICENSE  README.md  meson.build  uncrustify.ini
assets/: meson.build
metadata/: meson.build  wf-external-decorator.xml
proto/: meson.build  wf-decorator.xml
wf-metacity-decorator/: config.h  main.cpp  meson.build  nonstd.hpp  protocol.cpp  protocol.hpp  theme-parser.c  theme.c  theme.h
wf-plugin/: meson.build  nonstd.hpp  wf-external-decor.cpp
